# AdoptXchange

./: .gitignore  README.md  dev.env  pyproject.toml  requirements.txt
adopt_factory/: agent_factory.py
capabilities_registry/: capability_config.py  capability_registry.py
evals/: FIFO_CLIENT_README.md  README.md  __init__.py  bulk_evals.py  bulk_evals_v2.py  fifo_client.py  fifo_example.py  run_fifo_evaluation.py  test_data.csv  test_fifo_client.py
examples/: __init__.py  adopt_profile.json  models.py  read_env.py
examples/action-api-samples/: api_sample.py  sample.py
examples/action_api_samples/: adopt_client.py  api_constants.py  api_sample.py
examples/langgraph_samples/: __init__.py  langgraph_sample.py  test_agent.py
examples/tool_calling_samples/: __init__.py  tool_calling_adopt.py  tool_calling_sample.py  tool_factory.py
examples/tool_calling_samples/hitl/: humaninloopsample.ipynb
middleware_registry/: __init__.py  custom_middleware.py
middleware_registry/agent_middleware/: __init__.py  agent_registry.py
middleware_registry/middleware_registry/: __init__.py
otel_logging/: OTEL_LOGGING_README.md  otel_logging.py  otel_logging_example.py
